<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".TripsActivity">

    <TextView
            android:id="@+id/message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/title_home"
            android:textSize="20sp"
            android:gravity="center_horizontal"
            android:textAlignment="center"
            app:fontFamily="@font/roboto"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
             />

    <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/nav_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0dp"
            android:layout_marginStart="0dp"
            android:background="?android:attr/windowBackground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:menu="@menu/bottom_nav_menu"/>

    <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="150dp"
            app:layout_constraintBottom_toTopOf="@+id/nav_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/message"
            app:layout_constraintVertical_bias="1.0">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:orientation="horizontal">

                <ImageView
                        android:id="@+id/car_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="54dp"
                        android:layout_margin="@dimen/trip_margin"
                        android:contentDescription="@string/my_image_description"
                        android:scaleType="centerInside"
                        app:srcCompat="@drawable/ic_time_to_leave_black_24dp" />

                <TextView
                        android:id="@+id/trip1_exp"
                        android:layout_width="146dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/trip_margin"
                        android:layout_weight="1"
                        android:text="@string/trip_one_info"
                        android:textSize="14sp"
                        app:fontFamily="@font/roboto" />

                <Button
                        android:id="@+id/trip1_button"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="@dimen/trip_margin"
                        android:layout_marginEnd="@dimen/trip_margin"
                        android:layout_marginRight="@dimen/trip_margin"
                        android:layout_marginBottom="@dimen/trip_margin"
                        android:layout_weight="1"
                        android:text="@string/trip_button_text"
                        android:textSize="@dimen/trip_button_font_size" />

            </LinearLayout>

            <TextView
                    android:id="@+id/trip2"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:gravity="center_horizontal"
                    android:text="@string/trip_two_info"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    app:fontFamily="@font/roboto" />

            <TextView
                    android:id="@+id/trip3"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:gravity="center_horizontal"
                    android:text="@string/trip_three_info"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    app:fontFamily="@font/roboto" />

            <TextView
                    android:id="@+id/trip4"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:gravity="center_horizontal"
                    android:text="@string/trip_four_info"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    app:fontFamily="@font/roboto" />

            <TextView
                    android:id="@+id/trip5"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:gravity="center_horizontal"
                    android:text="@string/trip_five_info"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    app:fontFamily="@font/roboto" />

            <TextView
                    android:id="@+id/trip6"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:gravity="center_horizontal"
                    android:text="@string/trip_six_info"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    app:fontFamily="@font/roboto" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>